--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <title>Review Restaurant</title>
   </head>
   <body>
-    <noscript>Review Restaurant</noscript>
+    <!-- <noscript>Review Restaurant</noscript> -->
     <div id="root"></div>
   </body>
 </html>
